--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
    <link rel="stylesheet" href="{{ url_for('static', filename='main_goal_vs_inv.css') }}">
    <link rel="stylesheet" href="{{ url_for('static', filename='trends_percentage.css') }}">
    <link rel="stylesheet" href="{{ url_for('static', filename='macd_data.css') }}">
+   <link rel="stylesheet" href="{{ url_for('static', filename='macd_data_month.css') }}">
    <link rel="stylesheet" href="{{ url_for('static', filename='news_data.css') }}">
 
    <title>Document</title>
