--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
    <li><a href="{{ url_for('measures_mct') }}">Measurements</a></li>
    <li><a href="{{ url_for('news_data')}}">News</a></li>
    <li><a href="{{ url_for('macd_data')}}">MACD Data</a></li>
+   <li><a href="{{ url_for('bollinger_bands')}}">Bollinger Bands</a></li>
    <li><a href="{{ url_for('monetary_base')}}">Monetary Base</a></li>
 </ul>
 
