--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,7 @@
    <link rel="stylesheet" href="{{ url_for('static', filename='macd_data.css') }}">
    <link rel="stylesheet" href="{{ url_for('static', filename='macd_data_month.css') }}">
    <link rel="stylesheet" href="{{ url_for('static', filename='news_data.css') }}">
+   <link rel="stylesheet" href="{{ url_for('static', filename='bollinger_bands.css') }}">
 
    <title>Document</title>
 </head>
